# DigiDoc4-Client

./: .gitmodules  CMakeLists.txt  README-CDOC.md  prepare_osx_build_environment.sh
.github/workflows/: build.yml
client/: Application.cpp  CDoc1.cpp  CDoc1.h  CDoc2.cpp  CDocSupport.cpp  CDocSupport.h  CMakeLists.txt  CheckConnection.cpp  Crypto.cpp  Crypto.h  CryptoDoc.cpp  CryptoDoc.h  DigiDoc.cpp  DigiDoc.h  MainWindow.cpp  MainWindow.h  Utils.h
client/dialogs/: AddRecipients.cpp  AddRecipients.h  KeyDialog.cpp  KeyDialog.h
client/libcdoc/: CDOC1Reader.cpp  CDOC1Reader.h  CDOC1Writer.cpp  CDOC1Writer.h  CMakeLists.txt  Crypto.cpp  Crypto.h  DDOCReader.cpp  DDOCReader.h  DDOCWriter.cpp  DDOCWriter.h  Token.cpp  XMLReader.cpp  XMLReader.h  XMLWriter.cpp  XMLWriter.h  cdoc.cpp  cdoc.h  cdoc2.cpp  cdoc2.h  certificate.cpp  io.cpp  io.h  keys.cpp  keys.h  main.cpp  tar.cpp  tar.h  utils.h  zstream.h
client/translations/: en.ts  et.ts
client/widgets/: AddressItem.cpp  AddressItem.h  AddressItem.ui  ContainerPage.cpp  ContainerPage.h
